[package]
name = "murmur"
version = "0.1.0"
authors = ["Ogier Bouvier <ars3nic@ars3nic.ch>"]
edition = "2018"
license = "AGPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", features = [ "system" ] }
tokio = { version = "1", features = [ "sync", "time" ] }
snafu = "0.6"
serde = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
futures = "0.3"
lazy_static = { version = "1.4", optional = true } 
structopt = { version = "0.3", optional = true }
derive_builder = "0.9"
postage = "0.4"

[dev-dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", features = [ "test" ] }
lazy_static = "1.4"
snafu = { version = "0.6", features = [ "backtraces" ] }
tokio = { version = "1", features = [ "rt-multi-thread" ] }

[features]
default = []
cli = [ "structopt" ]
test = [ "drop/test", "lazy_static", "tokio/rt-multi-thread" ]
